Re-enable flatly theme

--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,6 @@
+@import './css/libraries/bootstrap/bootstrap.min.css';
+@import './css/libraries/flatly/flatly.min.css';
+
 body {
     padding-top: 80px;
     padding-bottom: 20px;
