Feat. Stylize infos component

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,3 +10,4 @@
 @import 'components/list-travels';
 @import 'components/search-bar';
 @import 'components/loader';
+@import 'components/travel-infos-component';
