Enable icons on Step list

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,6 +5,8 @@
 
 // Bases
 @import 'bases/bases';
+@import 'bases/fonts';
+@import 'bases/icons';
 
 // Components
 @import 'components/list-travels';
