Custom stylise DatePicker

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -13,3 +13,4 @@
 @import 'components/search-bar';
 @import 'components/loader';
 @import 'components/travel-infos-component';
+@import 'components/datepicker';
