--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,3 +14,4 @@
 @import 'components/loader';
 @import 'components/travel-infos-component';
 @import 'components/datepicker';
+@import 'components/form';
